[package]
name = "maomao-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.3.1", features = ["tokio-runtime"] }
time = "=0.3.17"
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }