[package]
name = "mp3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hound = "3.5.0"
id3 = "1.7.0"
mp3-duration = "0.1.10"
reqwest = "0.11.18"
# rodio = "0.17.1"
tokio = { version = "1.23.0", features = ["full"] }
